k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auspost-demo
  labels:
    app.kubernetes.io/part-of: auspost-devops-assessment
